# foldervault

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  index.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: README.md
crates/vault-app/: Cargo.toml  build.rs
crates/vault-app/src/: main.rs  shell.rs  ui.rs
crates/vault-cli/: Cargo.toml
crates/vault-cli/src/: main.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: crypto.rs  format.rs  journal.rs  lib.rs  lockout.rs  recovery.rs  secrets.rs  trash.rs  walk.rs
crates/vault-core/tests/: roundtrip.rs
crates/vault-shellext/: Cargo.toml
crates/vault-shellext/src/: lib.rs
docs/: PLAN.md  RELEASE-NOTES-v0.2.0.md  RELEASE-NOTES-v0.2.1.md  RELEASE-NOTES.md  RELEASING.md  SPEC.md  THREAT-MODEL.md  VERSIONING.md
egui-demo/: Cargo.toml
egui-demo/src/: main.rs
installer/: PACKAGE-README.txt  build-release.ps1  foldervault.iss  make-icons.ps1  make-msix-assets.ps1  register-dev.reg  setup-toolchain.ps1  unregister-dev.reg
installer/msix/: AppxManifest.xml
slint-demo/: Cargo.toml  build.rs
slint-demo/src/: main.rs
slint-demo/ui/: unlock.slint
