[package]
name = "vault-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "FolderVault"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_UI_Controls",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
] }

[build-dependencies]
winres = "0.1"
