[package]
name = "vault-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true
rand_core.workspace = true
zeroize.workspace = true
bincode.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
