[package]
name = "vault-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true
rand_core.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
bincode.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile = "3"
